Enhance cart functionality by adding item quantity management and updating the header to display total price; implement modal for cart details and improve item rendering in the cart.

--- a/src/stylesComponnents/Header-Style.css
+++ b/src/stylesComponnents/Header-Style.css
@@ -21,3 +21,14 @@
     align-items: center;
     margin-right: 30px;
 }
+.image-itemBag{
+    width: 30px;
+}
+.container-article{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border: solid;
+    border-radius: 10px;
+    
+}
