--- a/src/stylesComponnents/Header-Style.css
+++ b/src/stylesComponnents/Header-Style.css
@@ -1,7 +1,7 @@
 .header-ecommerce{
     width: 100%;
     height: 6rem;
-    border: solid;
+    /* border: solid; */
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -11,12 +11,12 @@
     height: 5rem;
     margin-left: 20px;
     margin-right: 20px;
-    border: solid;
+    /* border: solid; */
 }
 
 .bag-price{
     min-width: 120px;
-    border: solid;
+    /* border: solid; */
     display: flex;
     align-items: center;
     margin-right: 30px;
